@@ -18,15 +18,15 @@ public class Prueba_copia_prof {
         //Crear la tabla original y agregar columnas
         Tabla tablaOriginal = new Tabla();
         
-        ColumnaNumerica colNumerica = new ColumnaNumerica("Columna Numerica");
+        ColumnaNumerica colNumerica = new ColumnaNumerica("Numerica");
         colNumerica.agregarDato(50);
         colNumerica.agregarDato(100);
         
-        ColumnaCadena colCadena = new ColumnaCadena("Columna Cadena");
+        ColumnaCadena colCadena = new ColumnaCadena("Cadena");
         colCadena.agregarDato("Hola");
         colCadena.agregarDato("grupo");
         
-        ColumnaBooleana colBooleana = new ColumnaBooleana("Columna Booleana");
+        ColumnaBooleana colBooleana = new ColumnaBooleana("Booleana");
         colBooleana.agregarDato(true);
         colBooleana.agregarDato(false);
         
@@ -38,82 +38,76 @@ public class Prueba_copia_prof {
         // Crear una copia profunda de la tabla
         Tabla tablaCopia = new Tabla(tablaOriginal);
 
-        // // Imprimir la tabla copiada
-        // System.out.println("\nTabla Copiada:");
-        // tablaCopia.imprimirTabla();
+        // Imprimir la tabla copiada
+        System.out.println("\nTabla Copiada:");
 
-        // // Modificar la tabla original para verificar que la copia no cambia
-        // colNumerica.agregarDato(30);
-        // colCadena.agregarDato("Prueba");
-        // colBooleana.agregarDato(true);
+        // Modificar la tabla original para verificar que la copia no cambia
+        colNumerica.agregarDato(30);
+        colCadena.agregarDato("Prueba");
+        colBooleana.agregarDato(true);
 
-        // // Imprimir ambas tablas para verificar la independencia
-        // System.out.println("\nTabla Original después de modificaciones:");
-        // tablaOriginal.imprimirTabla();
+        // Imprimir ambas tablas para verificar la independencia
+        System.out.println("\nTabla Original después de modificaciones:");
 
-        // System.out.println("\nTabla Copiada después de modificaciones en la original:");
-        // tablaCopia.imprimirTabla();
-/////
+        System.out.println("\nTabla Copiada después de modificaciones en la original:");
+///
  
-        //  //Acceso indexado
-        //  List<Object> fila = tablaCopia.indexFila("1");  // Accede a la fila con etiqueta "1"
-        //  System.out.println("Fila 1: " + fila);
+         //Acceso indexado
+         List<Object> fila = tablaCopia.indexFila("1");  // Accede a la fila con etiqueta "1"
+         System.out.println("Fila 1: " + fila);
  
-        //  // Acceso a una columna completa
-        //  List<Object> columna = tablaCopia.indexColumna("Columna Numerica");  // Accede a la columna "Nombre"
-        //  System.out.println("Columna 'Columna 1': " + columna);
+         // Acceso a una columna completa
+         List<Object> columna = tablaCopia.indexColumna("Numerica");  // Accede a la columna "Nombre"
+         System.out.println("Columna 'Numerica': " + columna);
  
-        //  // Acceso a una celda específica
-        //  Object celda = tablaCopia.indexCelda("1", "Columna Numerica");  // Accede a la celda en fila "1" y columna "Nombre"
-        //  System.out.println("Celda en (1, Columna Numerica): " + celda);
+         // Acceso a una celda específica
+         Object celda = tablaCopia.indexCelda("1", "Numerica");  // Accede a la celda en fila "1" y columna "Nombre"
+         System.out.println("Celda en (1, Numerica): " + celda);
  
-        //  //eliminar filatablaCopia.eliminarFilaPorEtiqueta("0");
-        //  System.out.println(tablaCopia);
+         //eliminar filatablaCopia.eliminarFilaPorEtiqueta("0");
+         System.out.println(tablaCopia);
  
-        //  Tabla copia = tablaCopia.copiaProfunda();
-        //  System.out.println(copia);
+         Tabla copia = tablaCopia.copiaProfunda();
+         System.out.println(copia);
  
-        //  //descargar a csv
-        //  String descarga_rutaArchivo = "tabla_salida3.csv";
-        //  tablaCopia.descargarACSV(descarga_rutaArchivo);
+         //descargar a csv
+         String descarga_rutaArchivo = "tabla_salida3.csv";
+         tablaCopia.descargarACSV(descarga_rutaArchivo, true, ",");
  
-        //  // Ordenamiento NO ANDA 
-        //  List<String> l = new ArrayList<>();
-        //  l.add("Columna Numerica");
-        //  tablaCopia.ordenarFilas(l, true).imprimirTabla();
-         
+         // Ordenamiento NO ANDA 
+         List<String> l = new ArrayList<>();
+         l.add("Numerica");
+         System.out.println(tablaCopia.ordenarFilas(l, true));
  
-        //  // Muestreo
-        //  tablaCopia.muestreo(1).imprimirTabla();
-        //  System.out.println(tablaCopia);
+         // Muestreo
+        System.out.println( tablaCopia.muestreo(1));
  
-        //  //Seleccion NO FUNCIONA BIEN EL IMPRIMIR TABLA
-        //  Tabla tabla_seleccion = tablaCopia.seleccionar(Arrays.asList("1"), Arrays.asList("Columna Numerica"));
-        //  tabla_seleccion.imprimirTabla();
-        //  System.out.println(tabla_seleccion);
+         //Seleccion NO FUNCIONA BIEN EL IMPRIMIR TABLA
+         Tabla tabla_seleccion = tablaCopia.seleccionar(Arrays.asList("1"), Arrays.asList("Numerica"));
+         System.out.println(tabla_seleccion);
  
-        //  //ESTA MAL HECHO TAIL
-        //  Tabla head = tablaCopia.head(1);
-        //  Tabla tail = tablaCopia.tail(1);
-        //  System.out.println(head);
-        //  System.out.println(tail);
+         //ESTA MAL HECHO TAIL
+         Tabla head = tablaCopia.head(1);
+         Tabla tail = tablaCopia.tail(1);
+         System.out.println(head);
+         System.out.println(tail);
 
-        // //concatenar
-        // Tabla tablaConcatenada = Tabla.concatenarTablas(tablaOriginal, tablaCopia);
-        // tablaConcatenada.info();
-        // tablaOriginal.info();
+        //concatenar
+        Tabla tablaConcatenada = Tabla.concatenarTablas(tablaOriginal, tablaCopia);
+        tablaConcatenada.info();
+        tablaOriginal.info();
 
-        // List<String> columnas = List.of("Columna Numerica", "Columna Cadena");
-        // List<Predicate<Object>> predicados = List.of(
-        //     valor -> (Integer) valor > 30,   
-        //     //valor -> (Double) valor >20
+        List<String> columnas = Arrays.asList("Numerica", "Cadena");
+        List<Predicate<Object>> predicados = Arrays.asList(
+            valor -> (Integer) valor > 30,   
+            //valor -> (Double) valor >20
 
-        //     //valor -> (Boolean) valor.equals(true)
-        //     valor -> valor.equals("Hola".trim())
-        // );
-        // // String operadorLogico = "AND";
+            //valor -> (Boolean) valor.equals(true)
+            valor -> valor.equals("Hola".trim())
+        );
+        // String operadorLogico = "AND";
 
-        // Tabla tablaFiltrada = tablaCopia.filtrar(columnas, predicados, OperadorLogico.AND);
-        // tablaFiltrada.info();
+        Tabla tablaFiltrada = tablaCopia.filtrar(columnas, predicados, OperadorLogico.AND);
+        tablaFiltrada.info();
     }
 }
